--- a/doame-api/.eslintrc.json
+++ b/doame-api/.eslintrc.json
@@ -1,74 +1,89 @@
 {
     "env": {
-        "es2020": true,
-        "node": true,
-        "jest": true
+      "es6": true,
+      "node": true,
+      "jest": true
     },
     "extends": [
-        "standard",
-        "plugin:@typescript-eslint/recommended",
-        "prettier",
-        "plugin:prettier/recommended"
+      "airbnb-base",
+      "plugin:@typescript-eslint/recommended",
+      "prettier/@typescript-eslint",
+      "plugin:prettier/recommended"
     ],
+    "globals": {
+      "Atomics": "readonly",
+      "SharedArrayBuffer": "readonly"
+    },
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaVersion": 12,
-        "sourceType": "module"
+      "ecmaVersion": 11,
+      "sourceType": "module"
     },
     "plugins": [
-        "@typescript-eslint",
-        "eslint-plugin-import-helpers",
-        "prettier"
+      "@typescript-eslint",
+      "prettier",
+      "eslint-plugin-import-helpers"
     ],
     "rules": {
-        "camelcase": "off",
-        "@typescript-eslint/naming-convention": [
-            "error",
-            {
-                "selector": "interface",
-                "format": [
-                    "PascalCase"
-                ],
-                "custom": {
-                    "regex": "^I[A-Z]",
-                    "match": true
-                }
-            }
-        ],
-        "class-methods-use-this": "off",
-        "import/prefer-default-export": "off",
-        "no-shadow": "off",
-        "no-console": "off",
-        "no-useless-constructor": "off",
-        "no-empty-function": "off",
-        "lines-between-class-members": "off",
-        "import-helpers/order-imports": [
-            "warn",
-            {
-                "newlinesBetween": "always",
-                "groups": [
-                    "module",
-                    "/^@/",
-                    [
-                        "parent",
-                        "sibling",
-                        "index"
-                    ]
-                ],
-                "alphabetize": {
-                    "order": "asc",
-                    "ignoreCase": true
-                }
-            }
-        ],
-        "prettier/prettier": "error"
+      "no-new": "off",
+      "no-prototype-builtins": "off",
+      "no-restricted-syntax": "off",
+      "max-classes-per-file": "off",
+      "@typescript-eslint/no-explicit-any": "off",
+      "no-console": "off",
+      "import/prefer-default-export": "off",
+      "@typescript-eslint/explicit-function-return-type": ["off"],
+      "@typescript-eslint/no-unused-vars": [
+        "error",
+        {
+          "argsIgnorePattern": "_"
+        }
+      ],
+      "no-useless-constructor": "off",
+      "@typescript-eslint/naming-convention": [ 
+        "error", 
+        { 
+          "selector": "interface", 
+          "format": ["PascalCase"], 
+          "custom": { 
+            "regex": "^I[A-Z]", 
+            "match": true 
+          } 
+        } 
+      ],
+      "@typescript-eslint/explicit-module-boundary-types": ["warn", {
+        "allowArgumentsExplicitlyTypedAsAny": true
+      }],
+      "no-underscore-dangle": "off",
+      "@typescript-eslint/camelcase": "off",
+      "prettier/prettier": "error",
+      "class-methods-use-this": "off",
+      "import/extensions": [
+        "error",
+        "ignorePackages",
+        {
+          "ts": "never"
+        }
+      ]
+      // "import-helpers/order-imports": [
+      //   "warn",
+      //   {
+      //     "newlinesBetween": "always", 
+      //     "groups": [
+      //       "module",
+      //       "/^@server\/shared/",
+      //       "/^@/",
+      //       ["parent", "sibling", "index"]
+      //     ],
+      //     "alphabetize": { "order": "asc", "ignoreCase": true }
+      //   }
+      // ]
     },
     "settings": {
-        "import/parsers": {
-            "@typescript-eslint/parser": [".ts", ".tsx"]
-          },
-        "import/resolver": {
-            "typescript": {"alwaysTryTypes": true}
+      "import/resolver": {
+        "typescript": {
+          "directory": "packages/server/*/tsconfig.json"
         }
+      }
     }
-}
+  }
