--- a/doame-api/.prettierrc
+++ b/doame-api/.prettierrc
@@ -1,6 +1,6 @@
 {
-    "trailingComma": "es5",
-    "tabWidth": 4,
-    "semi": false,
-    "singleQuote": true
+    "semi": false, 
+    "singleQuote": true, 
+    "endOfLine": "auto",
+    "arrowParens": "avoid" 
   }
