--- a/doame-front/package.json
+++ b/doame-front/package.json
@@ -13,6 +13,8 @@
     "eslint-config-standard-with-typescript": "^21.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.5.5",
     "web-vitals": "^1.0.1"
