--- a/doame-front/package.json
+++ b/doame-front/package.json
@@ -2,6 +2,7 @@
   "name": "doame-front",
   "version": "0.1.0",
   "private": true,
+  "main": "src/app/index.tsx",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -13,6 +14,7 @@
     "eslint-config-standard-with-typescript": "^21.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
