--- a/doame-front/package.json
+++ b/doame-front/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.25.0",
+    "esbuild-darwin-arm64": "^0.14.39",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
