--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
         - doame_driver
       ports:
         - 3000:3000
-      command: yarn dev
+      command: sh -c "npm rebuild esbuild && yarn dev"
       working_dir: /app
       stdin_open: true
       volumes:
